[package]
name = "web-dom"
version = "0.2.2"
authors = ["Richard Anaya"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "js_ffi for dom functions"
repository = "https://github.com/richardanaya/web_dom"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js_ffi = "0.6"
globals = "1"
